main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}

# -------------------------
# SECURITY GROUP
# -------------------------
resource "aws_security_group" "flask_sg" {
  name = "flask-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# -------------------------
# EC2 INSTANCE
# -------------------------
resource "aws_instance" "flask_ec2" {
  ami                    = "ami-0532be01f26a3de55" # Amazon Linux (us-east-1)
  instance_type          = "t3.micro"
  key_name               = "test123"
  vpc_security_group_ids = [aws_security_group.flask_sg.id]

  user_data = <<-EOF
              #!/bin/bash
set -e

# Log everything (debug help)
exec > /var/log/user-data.log 2>&1

# Update & install packages
yum update -y
yum install -y python3 python3-pip

# App directory
APP_DIR=/opt/flask-app
mkdir -p $APP_DIR
cd $APP_DIR

# Create Flask app
cat << 'EOF' > app.py
from flask import Flask
import os

app = Flask(__name__)

@app.route("/")
def hello():
    return "Flask app running successfully with nohup 🚀"

if __name__ == "__main__":
    app.run(host="0.0.0.0", port=5000)
EOF

# Install Flask
pip3 install flask

# Kill old Flask process if exists
pkill -f app.py || true

# Run Flask using nohup
nohup python3 app.py > app.log 2>&1 &

echo "Flask app started using nohup"


  tags = {
    Name = "terraform-flask-ec2"
  }
}
